this commit is has the creation of the home , pokemonlist and pokemon component

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,7 @@
 
 .body {
   margin: 0 auto;
-  border: solid black;
+  border: solid 0.5px black;
   width: 80%;
   height: 550px;
   padding: 0.9%;
