--- a/src/components/home.css
+++ b/src/components/home.css
@@ -21,7 +21,8 @@
   font-family: "Grenze", serif;
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 10px;
+  margin-bottom: 40px;
 }
 
 .button {
