--- a/src/components/Pokimon_list.css
+++ b/src/components/Pokimon_list.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Grenze&display=swap");
+
 .list,
 ul {
+  text-align: center;
+  font-family: "Grenze", serif;
+  font-size: 24px;
 }
