--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Grenze&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -8,5 +10,12 @@
   width: 80%;
   height: 550px;
   padding: 0.9%;
+}
+
+.nav,
+a {
+  color: black;
   text-decoration: none;
+  font-family: "Grenze", serif;
+  font-size: 20px;
 }
